--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,7 +3,7 @@
   <% @posts.each do |post| %>
 
 
-<div id="<%= dom_id post %>">
+<div id="<%= dom_id post %>" class="post">
   <p class="post-title"><%= link_to post.title, post %></p>
   <p class="post-body"><%= post.body %></p>
 </div>
