--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,4 +1,6 @@
+<div><%= link_to "Back", request.referrer %></div>
+
 <div id="<%= dom_id post %>">
-  <p class="post-title"><%= request.referer %> <%= post.title %></p>
+  <p class="post-title"><%= post.title %></p>
   <p class="post-body"><%= post.body %></p>
 </div>
