--- a/app/views/pages/roadmap.html.erb
+++ b/app/views/pages/roadmap.html.erb
@@ -11,7 +11,7 @@
   <li>Block Channel</li>
   <li>Private Messages between Users</li>
   <li>Channel Mods</li>
-  <li></li>
+  <li>Block offensive usernames</li>
   <li></li>
   <li></li>
   <li></li>
