user has posts; posts have users

--- a/app/views/pages/roadmap.html.erb
+++ b/app/views/pages/roadmap.html.erb
@@ -1,7 +1,7 @@
 <h1>Roadmap</h1>
 <p>Upcoming Features</p>
 <ol>
-  <li>Blogs</li>
+  <li>Blogs: only posts by a single user</li>
   <li>Channels</li>
   <li>Posts standalone</li>
   <li>Posts in a specific Blog</li>
@@ -12,9 +12,9 @@
   <li>Private Messages between Users</li>
   <li>Channel Mods</li>
   <li>Block offensive usernames</li>
-  <li></li>
-  <li></li>
-  <li></li>
+  <li>User profile</li>
+  <li>User: posts by user</li>
+  <li>User: comments by user</li>
   <li></li>
   <li></li>
   <li></li>
