--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -2,5 +2,6 @@
 
 <div id="<%= dom_id post %>">
   <p class="post-title"><%= post.title %></p>
+  <p class="post-author"><%= post.user.username %></p>
   <p class="post-body"><%= post.body %></p>
 </div>
