--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -4,6 +4,7 @@
 body { font-size: 100%; }
 .post { border: 1px solid grey; border-radius: 10px; }
 .post-title { font-size: 1.5em; padding-left: 5px; }
+.post-author { font-size: 1em; padding-left: 5px; }
 .post-body { font-size: 1em; padding-left: 5px;}
 
 footer { margin-top: 50px; }
