sanitize and simple_format posts

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,9 +2,9 @@
 <div id="posts">
   <% @posts.each do |post| %>
 <div id="<%= dom_id post %>" class="post">
-  <p class="post-title"><%= link_to post.title, post %></p>
+  <p class="post-title"><%= link_to sanitize(post.title), post %></p>
   <p class="post-author"><%= post.user.username %></p>
-  <p class="post-body"><%= post.body %></p>
+  <p class="post-body"><%= simple_format(post.body) %></p>
 </div>
   <% end %>
 </div>
