--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,10 +1,9 @@
 <% content_for :title, "DVRSLY" %>
 <div id="posts">
   <% @posts.each do |post| %>
-<div id="<%= dom_id post %>" class="post">
-  <p class="post-title"><%= link_to sanitize(post.title), post %></p>
-  <p class="post-author"><%= post.user.username %></p>
-  <p class="post-body"><%= simple_format(post.body) %></p>
-</div>
+    <div id="<%= dom_id post %>" class="post">
+      <p class="post-title"><%= link_to sanitize(post.title), post %></p>
+      <p class="post-author"><%= post.user.username %></p>
+    <div class="post-body"><%= simple_format(post.body) %></div>
   <% end %>
 </div>
