user profile and links

--- a/app/views/pages/roadmap.html.erb
+++ b/app/views/pages/roadmap.html.erb
@@ -2,8 +2,7 @@
 <p>Upcoming Features</p>
 <ol>
   <li>Blogs: only posts by a single user</li>
-  <li>Channels</li>
-  <li>Posts standalone</li>
+  <li>Diversions (Channels)</li>
   <li>Posts in a specific Blog</li>
   <li>Posts in specific channels</li>
   <li>Replies to Posts</li>
@@ -24,3 +23,9 @@
   <li></li>
   <li></li>
 </ol>
+
+
+<p>Working Features</p>
+<ol>
+  <li>Posts standalone</li>
+<ol>
