--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -3,7 +3,7 @@
 
 <div id="<%= dom_id post %>" class="post">
   <p class="post-title"><%= sanitize post.title %></p>
-  <p class="post-author"><%= post.user.username %></p>
+  <p class="post-author"><%= link_to post.user.username, post.user %></p>
   <div class="post-body"><%= simple_format(post.body) %></div>
 </div>
 
