--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -9,6 +9,7 @@
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="" role="button" data-bs-toggle="dropdown" aria-expanded="false">Posts</a>
           <ul class="dropdown-menu">
+            <li><%= link_to "All Posts", posts_path, class: "dropdown-item" %></li>
             <li><%= link_to "New Post", new_post_path, class: "dropdown-item" %></li>
           </ul>
         </li>
@@ -16,6 +17,7 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="" role="button" data-bs-toggle="dropdown" aria-expanded="false"><%= Current.user.username %></a>
             <ul class="dropdown-menu">
+              <li><%= link_to "Profile", Current.user, class: "nav-link" %></li>
               <li><%= link_to "Change Password", edit_password_url(Current.user.password_reset_token), class: "nav-link" %></li>
               <li><%= button_to "Sign Out", session_path, method: :delete, class: "nav-link" %></li>
             </ul>
