posts for specific user

--- a/app/views/pages/roadmap.html.erb
+++ b/app/views/pages/roadmap.html.erb
@@ -5,16 +5,16 @@
   <li>Diversions (Channels)</li>
   <li>Posts in a specific Blog</li>
   <li>Posts in specific channels</li>
-  <li>Replies to Posts</li>
+  <li>Comments on Posts</li>
   <li>Block User</li>
   <li>Block Channel</li>
   <li>Private Messages between Users</li>
-  <li>Channel Mods</li>
+  <li>Diversion Mods</li>
   <li>Block offensive usernames</li>
   <li>User profile</li>
   <li>User: posts by user</li>
   <li>User: comments by user</li>
-  <li></li>
+  <li>User: Delete Account</li>
   <li></li>
   <li></li>
   <li></li>
