--- a/app/views/pages/roadmap.html.erb
+++ b/app/views/pages/roadmap.html.erb
@@ -1,31 +1,30 @@
 <h1>Roadmap</h1>
-<p>Upcoming Features</p>
+<h2>Upcoming Features</h2>
 <ol>
   <li>Blogs: only posts by a single user</li>
-  <li>Diversions (Channels)</li>
+  <li>Communities (Channels)</li>
   <li>Posts in a specific Blog</li>
-  <li>Posts in specific channels</li>
-  <li>Comments on Posts</li>
+  <li>Posts in specific Communities</li>
+  <li>Nested Comments</li>
   <li>Block User</li>
   <li>Block Channel</li>
   <li>Private Messages between Users</li>
   <li>Diversion Mods</li>
   <li>Block offensive usernames</li>
   <li>User profile</li>
-  <li>User: posts by user</li>
-  <li>User: comments by user</li>
   <li>User: Delete Account</li>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
+  <li>User flair by Community</li>
   <li></li>
   <li></li>
 </ol>
 
 
-<p>Working Features</p>
+<h2>Working Features</h2>
 <ol>
   <li>Posts standalone</li>
+  <li>User: posts by user</li>
+  <li>User: comments by user</li>
+  <li>Comments on Posts</li>
+  <li>Edit Comments</li>
+  <li>Edit Posts</li>
 <ol>
