--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,7 @@
 <h1><%= @user.username %></h1>
 
 <%= link_to "Posts", user_posts_path(@user) %>
-<%= link_to "Comments (soon)", user_posts_path(@user) %>
+<%= link_to "Comments", user_comments_path(@user) %>
 
 
 
