--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -2,7 +2,17 @@
 @import 'bootstrap-icons/font/bootstrap-icons';
 
 body { font-size: 100%; }
-.post { border: 1px solid grey; border-radius: 10px; }
+
+
+.comment { border: 1px solid grey; border-radius: 10px; }
+.comment-author { font-size: 1em; padding-left: 5px; }
+.comment-body { font-size: 1em; padding-left: 5px; }
+
+.post { border: 1px solid black; border-radius: 10px; 
+  & .comment { border: 1px dotted grey; border-radius: 10px; }
+  & .comment-author { font-size: 1em; padding-left: 5px; }
+  & .comment-body { font-size: 1em; padding-left: 5px; }
+}
 .post-title { font-size: 1.5em; padding-left: 5px; }
 .post-author { font-size: 1em; padding-left: 5px; }
 .post-body { font-size: 1em; padding-left: 5px; }
