--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -2,8 +2,8 @@
 <div><%= link_to "Back", request.referrer %></div>
 
 <div id="<%= dom_id post %>" class="post">
+  <p class="post-diversion"><%= link_to "d/" + post.diversion.title, post.diversion %>,  <%= link_to "u/" + post.user.username, post.user, class: "post-author" %></p>
   <p class="post-title"><%= sanitize post.title %></p>
-  <p class="post-author"><%= link_to post.user.username, post.user %></p>
   <div class="post-body"><%= simple_format(post.body) %></div>
 
 <% post.comments.each do |comment| %>
