--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,6 +2,7 @@
 <div id="posts">
   <% @posts.each do |post| %>
     <div id="<%= dom_id post %>" class="post">
+      <p class="post-diversion"><%= link_to post.diversion.title, post.diversion %></p>
       <p class="post-title"><%= link_to sanitize(post.title), post %></p>
       <p class="post-author"><%= link_to post.user.username, post.user %></p>
       <div class="post-body"><%= truncate(strip_tags(post.body), length: 250) %></div>
