--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -7,6 +7,13 @@
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
         <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="" role="button" data-bs-toggle="dropdown" aria-expanded="false">Diversions</a>
+          <ul class="dropdown-menu">
+            <li><%= link_to "All Diversions", diversions_path, class: "dropdown-item" %></li>
+            <li><%= link_to "New Diversion", new_diversion_path, class: "dropdown-item" %></li>
+          </ul>
+        </li>
+        <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="" role="button" data-bs-toggle="dropdown" aria-expanded="false">Posts</a>
           <ul class="dropdown-menu">
             <li><%= link_to "All Posts", posts_path, class: "dropdown-item" %></li>
