--- a/app/views/diversions/index.html.erb
+++ b/app/views/diversions/index.html.erb
@@ -2,6 +2,7 @@
 
 <% content_for :title, "Diversions" %>
 
+<div><%= link_to "Back", request.referrer %></div>
 <h1>Diversions</h1>
 
 <div id="diversions">
