--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,5 @@
 <% content_for :title, "DVRSLY" %>
+<%== pagy_bootstrap_nav(@pagy) if @pagy.pages > 1 %>
 <div id="posts">
   <% @posts.each do |post| %>
     <div id="<%= dom_id post %>" class="post">
