subcomments model associations setup

--- a/app/views/pages/roadmap.html.erb
+++ b/app/views/pages/roadmap.html.erb
@@ -2,18 +2,25 @@
 <h2>Upcoming Features</h2>
 <ol>
   <li>Blogs: only posts by a single user</li>
-  <li>Communities (Channels)</li>
   <li>Posts in a specific Blog</li>
   <li>Posts in specific Communities</li>
   <li>Nested Comments</li>
   <li>Block User</li>
-  <li>Block Channel</li>
+  <li>Block Diversion</li>
   <li>Private Messages between Users</li>
   <li>Diversion Mods</li>
   <li>Block offensive usernames</li>
-  <li>User profile</li>
+  <li>User Profile</li>
   <li>User: Delete Account</li>
-  <li>User flair by Community</li>
+  <li>User Flair by Community</li>
+  <li>Follow a Blog</li>
+  <li>Follow / subscribe to Diversion</li>
+  <li>Follow / subscribe to Post</li>
+  <li>Follow / subscribe to User</li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
   <li></li>
   <li></li>
 </ol>
@@ -27,4 +34,5 @@
   <li>Comments on Posts</li>
   <li>Edit Comments</li>
   <li>Edit Posts</li>
+  <li>Communities (Diversions)</li>
 <ol>
