--- a/app/views/diversions/show.html.erb
+++ b/app/views/diversions/show.html.erb
@@ -1,5 +1,7 @@
 <p style="color: green"><%= notice %></p>
 
+<%= link_to "Post in Diversion", new_diversion_post_path(@diversion) %>
+
 <%= render @diversion %>
 
 <div>
