--- a/app/views/pages/roadmap.html.erb
+++ b/app/views/pages/roadmap.html.erb
@@ -3,7 +3,6 @@
 <ol>
   <li>Blogs: only posts by a single user</li>
   <li>Posts in a specific Blog</li>
-  <li>Posts in specific Communities</li>
   <li>Nested Comments</li>
   <li>Block User</li>
   <li>Block Diversion</li>
@@ -35,4 +34,5 @@
   <li>Edit Comments</li>
   <li>Edit Posts</li>
   <li>Communities (Diversions)</li>
+  <li>Posts in specific Diversions</li>
 <ol>
