--- a/app/views/pages/roadmap.html.erb
+++ b/app/views/pages/roadmap.html.erb
@@ -1,6 +1,12 @@
 <h1>Roadmap</h1>
 <h2>Upcoming Features</h2>
 <ol>
+  <li>User Profile</li>
+  <li>Download all your data</li>
+  <li>User: Delete Account</li>
+  <li>Can fully erase your data, replacing all posts and comments.</li>
+  <li>Block offensive usernames</li>
+  <li></li>
   <li>Blogs: only posts by a single user</li>
   <li>Posts in a specific Blog</li>
   <li>Nested Comments</li>
@@ -8,17 +14,35 @@
   <li>Block Diversion</li>
   <li>Private Messages between Users</li>
   <li>Diversion Mods</li>
-  <li>Block offensive usernames</li>
-  <li>User Profile</li>
-  <li>User: Delete Account</li>
   <li>User Flair by Community</li>
   <li>Follow a Blog</li>
   <li>Follow / subscribe to Diversion</li>
   <li>Follow / subscribe to Post</li>
   <li>Follow / subscribe to User</li>
-  <li></li>
-  <li></li>
-  <li></li>
+  <li>Receive Notifications on new Posts in Diversion</li>
+  <li>Receive Notifications on new Posts and Comments by a User</li>
+  <li>Only a minimum of a username and password is required to sign up!</li>
+  <li> Full vote scores (+/-) like old Reddit.</li>
+  <li>User tagging using @, Community tagging using !.</li>
+  <li>A post can consist of a title and any combination of self text, a URL, or nothing else.</li>
+  <li>Notifications, on comment replies and when you're tagged.</li>
+  <li>Notifications can be sent via email.</li>
+  <li>Private messaging support.</li>
+  <li>i18n / internationalization support.</li>
+  <li>Moderation abilities.</li>
+  <li>Public Moderation Logs.</li>
+  <li>Can sticky posts to the top of communities.</li>
+  <li>Both site admins, and community moderators, who can appoint other moderators.</li>
+  <li>Can lock, remove, and restore posts and comments.</li>
+  <li>Can ban and unban users from communities and the site.</li>
+  <li>Can transfer site and communities to others.</li>
+  <li>Can fully erase your data, replacing all posts and comments.</li>
+  <li>NSFW post / community support.</li>
+  <li>Discovery is weak—Reddit suggests new communities based on your interests, while Lemmy lacks seamless cross-community recommendations.</li>
+  <li>Seamless: users shouldn’t need to worry about federation.</li>
+  <li>Consistent: votes, comments, and post history should sync across all instances.</li>
+  <li>Scalable: it needs strong infrastructure to support large communities.</li>
+  <li>User-friendly: with intuitive mobile apps, good moderation tools, and an easy signup process.</li>
   <li></li>
   <li></li>
   <li></li>
