--- a/app/views/pages/roadmap.html.erb
+++ b/app/views/pages/roadmap.html.erb
@@ -7,12 +7,14 @@
   <li>Can fully erase your data, replacing all posts and comments.</li>
   <li>Block offensive usernames</li>
   <li></li>
+  <li>incorporate https://takeitdown.ncmec.org</li>
   <li>Blogs: only posts by a single user</li>
   <li>Posts in a specific Blog</li>
   <li>Nested Comments</li>
   <li>Block User</li>
   <li>Block Diversion</li>
   <li>Private Messages between Users</li>
+  <li>User-defined list of blocked words in Private Messages. Example: a user does not like automobiles so any PM with the word "automobile" or "automobiles" will be blocked.</li>
   <li>Diversion Mods</li>
   <li>User Flair by Community</li>
   <li>Follow a Blog</li>
