basic blog functionality

--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -3,6 +3,8 @@
 
 body { font-size: 100%; }
 
+.blog-body { font-size: 1em; padding-left: 5px; }
+.blog-title { font-size: 1.5em; padding-left: 5px; }
 .diversion-body { font-size: 1em; padding-left: 5px; }
 .diversion-title { font-size: 1.5em; padding-left: 5px; }
 
