--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,6 @@
 <% content_for :title, "DVRSLY" %>
 <h1><%= @user.username %></h1>
 
+<%= link_to "Blogs", user_blogs_path(@user) %>
 <%= link_to "Posts", user_posts_path(@user) %>
 <%= link_to "Comments", user_comments_path(@user) %>
-
-
-
