added ban_reasons; updated some layouts

--- a/app/views/blogs/_blog.html.erb
+++ b/app/views/blogs/_blog.html.erb
@@ -1,17 +1,17 @@
-<% content_for :title, "DVRSLY:blog.title" %>
-
 <div id="<%= dom_id blog %>" class="blog">
-  <p class="blog-title"><%= link_to sanitize(blog.title), blog %></p>
+  <p><span class="blog-title"><%= link_to sanitize(blog.title), blog %></span> <span class="blog-author"><%= link_to "(u/" + blog.user.username + ")" %></span></p>
   <p class="blog-description"><%= simple_format(blog.description) %></p>
 
   <% if @posts.present? %>
     <%== pagy_bootstrap_nav(@pagy) if @pagy.pages > 1 %>
     <% @posts.each do |post| %>
-      <p>
-        <span class="post-title"><%= link_to "p/" + post.title, post %></span>
-        <span class="post-author"><%= link_to "u/" + post.user.username, post.user %></span>
-      </p>
-      <p class="post-body"><%= post.body %></p>
+      <div id="<%= dom_id post %>" class="post">
+        <p>
+          <span class="post-title"><%= link_to "p/" + post.title, post %></span>
+          <span class="post-author"><%= link_to "u/" + post.user.username, post.user %></span>
+        </p>
+        <p class="post-body"><%= post.body %></p>
+      </div>
     <% end %>
   <% end %>
 </div>
