--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -3,11 +3,6 @@
 
 body { font-size: 100%; }
 
-.blog-body { font-size: 1em; padding-left: 5px; }
-.blog-title { font-size: 1.5em; padding-left: 5px; }
-.diversion-body { font-size: 1em; padding-left: 5px; }
-.diversion-title { font-size: 1.5em; padding-left: 5px; }
-
 
 
 /* broke */
@@ -34,7 +29,25 @@ body { font-size: 100%; }
   transition: 0.3s;
 }
 
+.blog { border: 1px solid black; border-radius: 10px; 
+  & .posts { border: 1px dotted grey; border-radius: 10px; }
+  & .posts-author { font-size: 1em; padding-left: 5px; }
+  & .posts-body { font-size: 1em; padding-left: 5px; }
+  & .comment { border: 1px dotted grey; border-radius: 10px; }
+  & .comment-author { font-size: 1em; padding-left: 5px; }
+  & .comment-body { font-size: 1em; padding-left: 5px; }
+}
 
+.blog-author { font-size: 1em; padding-left: 5px; }
+.blog-body { font-size: 1em; padding-left: 5px; }
+.blog-description { font-size: 1em; padding-left: 5px; }
+.blog-title { font-size: 1.5em; padding-left: 5px; }
+
+.diversion{ border: 1px solid black; border-radius: 10px; 
+  & .post { border: 1px dotted grey; border-radius: 10px; }
+  & .post-author { font-size: 1em; padding-left: 5px; }
+  & .post-body { font-size: 1em; padding-left: 5px; }
+}
 
 
 .comment { border: 1px solid grey; border-radius: 10px; }
@@ -50,6 +63,7 @@ footer { bottom: 0; margin-top: 50px; }
   & .comment-author { font-size: 1em; padding-left: 5px; }
   & .comment-body { font-size: 1em; padding-left: 5px; }
 }
+
 .post-diversion { font-size: 1em; padding-left: 5px; }
 .post-author { font-size: 1em; padding-left: 5px; }
 .post-body { font-size: 1em; padding-left: 5px; }
