comment selfjoin keys

--- a/app/views/pages/roadmap.html.erb
+++ b/app/views/pages/roadmap.html.erb
@@ -1,22 +1,28 @@
 <h1>Roadmap</h1>
 <h2>Upcoming Features</h2>
 <ol>
+  <li>Delete Post</li>
+  <li>Delete Comment</li>
   <li>User Profile</li>
   <li>Download all your data</li>
   <li>User: Delete Account</li>
+  <li>Block User</li>
+  <li>Block Diversion</li>
   <li>Can fully erase your data, replacing all posts and comments.</li>
   <li>Block offensive usernames</li>
+  <li>Block all users except those specifically allowed</li>
+  <li>Block all users who post in diversions you have blocked</li>
+  <li>Block all posts with keywords that you have blocked</li>
   <li></li>
   <li>incorporate https://takeitdown.ncmec.org</li>
   <li>Blogs: only posts by a single user</li>
   <li>Posts in a specific Blog</li>
   <li>Nested Comments</li>
-  <li>Block User</li>
-  <li>Block Diversion</li>
   <li>Private Messages between Users</li>
   <li>User-defined list of blocked words in Private Messages. Example: a user does not like automobiles so any PM with the word "automobile" or "automobiles" will be blocked.</li>
   <li>Diversion Mods</li>
   <li>User Flair by Community</li>
+  <li>User Avatar</li>
   <li>Follow a Blog</li>
   <li>Follow / subscribe to Diversion</li>
   <li>Follow / subscribe to Post</li>
@@ -24,7 +30,7 @@
   <li>Receive Notifications on new Posts in Diversion</li>
   <li>Receive Notifications on new Posts and Comments by a User</li>
   <li>Only a minimum of a username and password is required to sign up!</li>
-  <li> Full vote scores (+/-) like old Reddit.</li>
+  <li>Full vote scores (+/-) like old Reddit.</li>
   <li>User tagging using @, Community tagging using !.</li>
   <li>A post can consist of a title and any combination of self text, a URL, or nothing else.</li>
   <li>Notifications, on comment replies and when you're tagged.</li>
