created pages model, table, views. routing pages by page title

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,11 +1,11 @@
 <footer>
   <div class="container-fluid">
     <p>
-      <%= link_to "About", about_url %>
-      : <%= link_to "FAQ", faq_url %>
-      : <%= link_to "Roadmap", roadmap_url %>
-      : <%= link_to "Terms", terms_url %>
-      : <%= link_to "Privacy", privacy_url %>
+      <%= link_to "About", page_path('about') %>
+      : <%= link_to "FAQ", page_path('faq') %>
+      : <%= link_to "Roadmap", page_path('roadmap')%>
+      : <%= link_to "Terms", page_path('terms') %>
+      : <%= link_to "Privacy", page_path('privacy') %>
     </p>
     <p>
       &copy; 2025 DVRSLY.com
