--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,2 +1,17 @@
-<h1>Pages#index</h1>
-<p>Find me in app/views/pages/index.html.erb</p>
+<h1>Pages</h1>
+
+
+
+<% content_for :title, "Pages" %>
+<p style="color: green"><%= notice %></p>
+
+<div id="pages">
+  <% @pages.each do |page| %>
+    <div id="<%= dom_id page %>" class="page">
+      <p>
+        <span class="page-title"><%= link_to sanitize(page.title), page %></span>
+      </p>
+      <div class="page-body "><%= truncate(strip_tags(page.body), length: 250) %></div>
+    </div>
+  <% end %>
+</div>
