--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -4,7 +4,10 @@
 <%= render @page %>
 
 <div>
-  <%= link_to "Edit this page", edit_page_path(@page) %> |
+  <%= link_to "Edit this pageeeeeeeeeeee", edit_page_path(@page) %> |
   <%= link_to "Back to pages", pages_path %>
 
 </div>
+
+
+<h1>@page = <%= @page.inspect %> END</h1>
