comment deletion confirmation; pages to doc/

--- a/app/views/pages/roadmap.html.erb
+++ b/app/views/pages/roadmap.html.erb
@@ -1,8 +1,8 @@
 <h1>Roadmap</h1>
 <h2>Upcoming Features</h2>
 <ol>
-  <li>Delete Post</li>
   <li>Delete Comment</li>
+  <li>Delete Post</li>
   <li>User Profile</li>
   <li>Download all your data</li>
   <li>User: Delete Account</li>
@@ -36,6 +36,7 @@
   <li>Notifications, on comment replies and when you're tagged.</li>
   <li>Notifications can be sent via email.</li>
   <li>Private messaging support.</li>
+  <li>Anchor to Comment in Post after editing</li>
   <li>i18n / internationalization support.</li>
   <li>Moderation abilities.</li>
   <li>Public Moderation Logs.</li>
