--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -3,7 +3,8 @@
     <p>
       <%= link_to "About", doc_path('about') %>
       : <%= link_to "FAQ", doc_path('faq') %>
-      : <%= link_to "Roadmap", doc_path('roadmap')%>
+      : <%= link_to "DOC Roadmap", doc_path('roadmap')%>
+      : <%= link_to "Roadmap", roadmap_url %>
       : <%= link_to "Terms", doc_path('terms') %>
       : <%= link_to "Privacy", doc_path('privacy') %>
     </p>
