--- a/app/views/pages/_page.html.erb
+++ b/app/views/pages/_page.html.erb
@@ -1,6 +1,5 @@
 <div id="<%= dom_id page %>" class="page">
   <p><span class="page-title"><%= link_to sanitize(page.title), page_path(page) %></span></p>
   <p class="page-body "><%= simple_format(page.body) %></p>
-  <h2>page = <%= @page.inspect %> END</h2>
-  <%= link_to "Edit this page _page", edit_page_path(page) %> |
+  <%= link_to "Edit this page", edit_page_path(page) %> |
 </div>
