--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -6,13 +6,10 @@
 <div id="pages">
   <% @pages.each do |page| %>
     <div id="<%= dom_id page %>" class="page">
-      <p>
+      <div>
         <span class="page-title"><%= link_to page.title, doc_path(page.title) %></span>
-      </p>
+      </div>
       <div class="page-body "><%= truncate(strip_tags(page.body), length: 250) %></div>
-  <h2>page = <%= page.inspect %> END</h2>
-  <h2>@page = <%= page %> END</h2>
-<h1>bottom of page</h1>
 
     </div>
   <% end %>
