can only delete your own blogs

--- a/app/views/pages/roadmap.html.erb
+++ b/app/views/pages/roadmap.html.erb
@@ -1,8 +1,7 @@
 <h1>Roadmap</h1>
 <h2>Upcoming Features</h2>
 <ol>
-  <li>Delete Comment</li>
-  <li>Delete Post</li>
+  <li>Delete Blog</li>
   <li>User Profile</li>
   <li>Download all your data</li>
   <li>User: Delete Account</li>
@@ -60,6 +59,8 @@
 
 <h2>Working Features</h2>
 <ol>
+  <li>Delete Post</li>
+  <li>Delete Comment</li>
   <li>Posts standalone</li>
   <li>User: posts by user</li>
   <li>User: comments by user</li>
