--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -38,7 +38,7 @@
           </li>
         <% else %> 
         <li class="nav-item">
-          <%= link_to "Sign Up", new_registration_path, class: "nav-link" %>
+          <%# link_to "Sign Up", new_registration_path, class: "nav-link" %>
         </li>
         <li>
           <%= link_to "Sign In", new_session_path, class: "nav-link" %>
