--- a/app/views/pages/_page.html.erb
+++ b/app/views/pages/_page.html.erb
@@ -1,5 +1,6 @@
 <div id="<%= dom_id page %>" class="page">
   <p><span class="page-title"><%= link_to sanitize(page.title), page_path(page) %></span></p>
+  <p class="page-link"><%= simple_format(page.link) %></p>
   <p class="page-body "><%= simple_format(page.body) %></p>
-  <%= link_to "Edit this page", edit_page_path(page) %> |
+  <%= link_to "Edit this page", edit_page_path(page) %>
 </div>
