--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -7,7 +7,7 @@
   <% @pages.each do |page| %>
     <div id="<%= dom_id page %>" class="page">
       <div>
-        <span class="page-title"><%= link_to page.title, doc_path(page.title) %></span>
+        <span class="page-title"><%= link_to page.title, doc_path(page.link) %></span>
       </div>
       <div class="page-body "><%= truncate(strip_tags(page.body), length: 250) %></div>
 
