--- a/app/views/pages/_page.html.erb
+++ b/app/views/pages/_page.html.erb
@@ -2,5 +2,5 @@
   <p><span class="page-title"><%= link_to sanitize(page.title), page_path(page) %></span></p>
   <p class="page-link"><%= simple_format(page.link) %></p>
   <p class="page-body "><%= simple_format(page.body) %></p>
-  <%= link_to "Edit this page", edit_page_path(page) %>
+  <% if Current.user %><%= link_to "Edit this page", edit_page_path(page) %><% end %>
 </div>
