--- a/app/views/pages/_form.html.erb
+++ b/app/views/pages/_form.html.erb
@@ -23,7 +23,7 @@
 
   <div>
     <%= form.label :body, style: "display: block" %>
-    <%= form.textarea :body, placeholder: "Max length 500 characters", maxlength: 500 %>
+    <%= form.textarea :body, placeholder: "Body of the Page Here" %>
   </div>
 
   <div>
