shows version number

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -8,7 +8,7 @@
       : <%= link_to "Privacy", doc_path('privacy') %>
     </p>
     <p>
-      &copy; 2025 DVRSLY.com
+      &copy; 2025 DVRSLY.com, Version <%= Dvrsly::Application::VERSION %>
     </p>
   </div>
 </footer>
