switching back to hardcoded pages

--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -56,6 +56,9 @@ body { font-size: 100%; }
 
 footer { bottom: 0; margin-top: 50px; }
 
+.copyright { right-margin: 10px; }
+.builtby { margin: 10px; }
+
 .main { background-color: #ff0; left-margin: 10%; }
 
 .post { border: 1px solid black; border-radius: 10px; 
