--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,6 +1,3 @@
 <h1>About DVRSLY</h1>
 
-
-DVRSLY is an equal opportunity employer, and all qualified applicants will receive consideration for employment without regard to race, color, religion, sexual orientation, gender, gender identity, national origin, disability, veteran status, pregnancy, age, genetic information, or any other characteristic protected by law.
-
-
+DVRSLY is a social media project. It is very new and in heavy development. Public signups coming soon.
