slogan: Live Life Diversely

--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -56,8 +56,9 @@ body { font-size: 100%; }
 
 footer { bottom: 0; margin-top: 50px; }
 
-.copyright { right-margin: 10px; }
-.builtby { margin: 10px; }
+.copyright { margin-right: 10px; }
+.builtby { margin-left: 10px; }
+.slogan { margin-left: 10px; margin-right: 10px; }
 
 .main { background-color: #ff0; left-margin: 10%; }
 
