--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -8,7 +8,7 @@
       : <%= link_to "Privacy", page_path('privacy') %>
     </p>
     <p>
-      <span class="copyright">&copy; 2025 DVRSLY.com</span> <span class="builtby">Built by Shannon</span>
+      <span class="copyright">&copy; 2025 DVRSLY.com</span> <span class="slogan">Live Life Diversely</span> <span class="builtby">Built by Shannon</span>
     </p>
   </div>
 </footer>
