--- a/app/views/diversions/show.html.erb
+++ b/app/views/diversions/show.html.erb
@@ -4,9 +4,10 @@
 
 <%= render @diversion %>
 
+<% if Current.user %>
 <div>
   <%= link_to "Edit this diversion", edit_diversion_path(@diversion) %> |
   <%= link_to "Back to diversions", diversions_path %>
-
   <%= button_to "Destroy this diversion", @diversion, method: :delete %>
 </div>
+<% end %>
