--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -6,5 +6,5 @@
       <%= button_to "Edit Post", edit_post_path(@post), method: :get %> <%= button_to "Delete Post", @post, method: :delete %>
     <% end %>
   <% end %>
-  <%= link_to "Comment on Post", new_post_comment_path(@post) %>
+  <% if Current.user %><%= link_to "Comment on Post", new_post_comment_path(@post) %><% end %>
 </div>
