--- a/app/views/comments/show.html.erb
+++ b/app/views/comments/show.html.erb
@@ -2,8 +2,9 @@
 
 <%= render @comment %>
 
+<% if Current.user %>
 <div>
   <%= link_to "Edit this comment", [:edit, @comment.post, @comment] %> |
-
   <%= button_to "Destroy this comment", @comment, method: :delete %>
 </div>
+<% end %>
