--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -10,21 +10,21 @@
           <a class="nav-link dropdown-toggle" href="" role="button" data-bs-toggle="dropdown" aria-expanded="false">Blogs</a>
           <ul class="dropdown-menu">
             <li><%= link_to "All Blogs", blogs_path, class: "dropdown-item" %></li>
-            <li><%= link_to "New Blog", new_blog_path, class: "dropdown-item" %></li>
+            <% if Current.user %><li><%= link_to "New Blog", new_blog_path, class: "dropdown-item" %></li><% end %>
           </ul>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="" role="button" data-bs-toggle="dropdown" aria-expanded="false">Diversions</a>
           <ul class="dropdown-menu">
             <li><%= link_to "All Diversions", diversions_path, class: "dropdown-item" %></li>
-            <li><%= link_to "New Diversion", new_diversion_path, class: "dropdown-item" %></li>
+            <% if Current.user %><li><%= link_to "New Diversion", new_diversion_path, class: "dropdown-item" %></li><% end %>
           </ul>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="" role="button" data-bs-toggle="dropdown" aria-expanded="false">Posts</a>
           <ul class="dropdown-menu">
             <li><%= link_to "All Posts", posts_path, class: "dropdown-item" %></li>
-            <li><%= link_to "New Post", new_post_path, class: "dropdown-item" %></li>
+            <% if Current.user %><li><%= link_to "New Post", new_post_path, class: "dropdown-item" %></li><% end %>
           </ul>
         </li>
         <% if authenticated? %>
