no posting in diversion unless logged in

--- a/app/views/diversions/show.html.erb
+++ b/app/views/diversions/show.html.erb
@@ -1,6 +1,6 @@
 <p style="color: green"><%= notice %></p>
 
-<%= link_to "Post in Diversion", new_diversion_post_path(@diversion) %>
+<% if Current.user %><%= link_to "Post in Diversion", new_diversion_post_path(@diversion) %><% end %>
 
 <%= render @diversion %>
 
