--- a/app/views/diversions/_diversion.html.erb
+++ b/app/views/diversions/_diversion.html.erb
@@ -1,7 +1,7 @@
 <% content_for :title, "DVRSLY:diversion.title" %>
 
 <div id="<%= dom_id diversion %>" class="diversion">
-  <p class="diversion-title"><%= link_to sanitize(diversion.title), diversion %></p>
+  <p class="diversion-title"><%= link_to "d/" + sanitize(diversion.title), diversion %></p>
   <p class="diversion-description"><%= simple_format(diversion.description) %></p>
 
   <% if @posts.present? %>
