--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -6,7 +6,7 @@
   <% @blogs.each do |blog| %>
     <div id="<%= dom_id blog %>" class="blog">
       <p>
-        <span class="blog-title"><%= link_to sanitize(blog.title), blog %></span>
+        <span class="blog-title"><%= link_to "b/" + sanitize(blog.title), blog %></span>
         <span class="blog-author"><%= link_to "u/" + blog.user.username, blog.user %></span>
       </p>
       <div class="blog-description"><%= truncate(strip_tags(blog.description), length: 250) %></div>
