--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -4,6 +4,7 @@
       <%= link_to "About", page_path('about') %>
       : <%= link_to "FAQ", page_path('faq') %>
       : <%= link_to "Roadmap", page_path('roadmap')%>
+      : <%= link_to "Changelog", page_path('changelog')%>
       : <%= link_to "Terms", page_path('terms') %>
       : <%= link_to "Privacy", page_path('privacy') %>
     </p>
