show 500 chars on posts index

--- a/app/views/pages/changelog.html.erb
+++ b/app/views/pages/changelog.html.erb
@@ -1,6 +1,6 @@
-<h1>Change Log</h1>
-<pre>
-198fdc1 (show link prefixes, 2025-03-28)
+<h1>Changelog</h1><pre>
+09bc9df (added changelog, 2025-03-29)
+4a09cba (show link prefixes, 2025-03-28)
 1ff7341 (only show Back link if referrer, 2025-03-28)
 1495756 (b/ prefix on blog titles, 2025-03-28)
 ee128c4 (add d prefix to diversion title, 2025-03-28)
