--- a/app/views/pages/changelog.html.erb
+++ b/app/views/pages/changelog.html.erb
@@ -1,4 +1,5 @@
-<h1>Changelog</h1><pre>
+<h1>Changelog</h1><pre>c2e6dc0 (favicon and navbar icon, 2025-03-29)
+3b17d3b (show 500 chars on posts index, 2025-03-29)
 09bc9df (added changelog, 2025-03-29)
 4a09cba (show link prefixes, 2025-03-28)
 1ff7341 (only show Back link if referrer, 2025-03-28)
