--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-light">
   <div class="container-fluid">
-    <%= link_to (image_tag "icon.png", alt: "dvrsly logo", width: 48, height: 48, class: "d-inline-block align-text-top"), root_path, class: "navbar-brand" %> 
+    <%= link_to (image_tag "dvrsly_logo_black_pink_transparent_512x512.png", alt: "dvrsly logo", width: 48, height: 48, class: "d-inline-block align-text-top"), root_path, class: "navbar-brand" %> 
     <a class="navbar-brand" href="/">DVRSLY</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
